--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,37 +1,42 @@
-name: Build and push to aws
+AWSTemplateFormatVersion: '2010-09-09'
+Description: AWS CloudFormation Template to create an S3 Bucket and a Lambda function.
 
-on:
-  push:
-    branches:
-      - main
+Resources:
+  MyS3Bucket:
+    Type: AWS::S3::Bucket
+    Properties:
+      BucketName: my-unique-s3-bucket-name
 
+  MyLambdaFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: MyLambdaFunction
+      Runtime: python3.9
+      Handler: index.handler
+      Code:
+        S3Bucket: my-code-bucket
+        S3Key: lambda-code.zip
+      Role:
+        Fn::GetAtt:
+          - LambdaExecutionRole
+          - Arn
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: checkout repo
-        uses: actions/checkout@v3
-
-      - name: Setup dotnet
-        uses: actions/setup-dotnet@v3
-        with: 
-          dotnet-version: '6.0'
-
-      - name: Build project  
-        run: dotnet restore; dotnet publish -o site;
-
-      - name: create zip package
-        run: cd site; zip ../site.zip *;
-
-      - name: Deploy to aws EB
-        uses: einaregilsson/beanstalk-deploy@v21
-        with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID}}
-          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: individuell API
-          environment_name: individuell-env
-          version_label: ${{ github.run_id }}
-          region: eu-north-1
-          deployment_package: site.zip
+  LambdaExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: lambda.amazonaws.com
+            Action: sts:AssumeRole
+      Policies:
+        - PolicyName: LambdaS3Access
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - s3:GetObject
+                Resource: "*"
