--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -20,16 +20,16 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '9.0.0'
+        dotnet-version: '9.0.100-preview.7'  # Use the correct preview version for .NET 9.0
 
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: ./Abdullahi_Elmi  # Replace with the correct relative path
+      working-directory: ./Abdullahi_Elmi/EncryptionApi  # Path to the .sln/.csproj file
 
     - name: Build
       run: dotnet build --no-restore
-      working-directory: ./Abdullahi_Elmi  # Replace with the correct relative path
+      working-directory: ./Abdullahi_Elmi/EncryptionApi  # Path to the .sln/.csproj file
 
     - name: Run tests
       run: dotnet test --no-build --verbosity normal
-      working-directory: ./Abdullahi_Elmi  # Replace with the correct relative path
+      working-directory: ./Abdullahi_Elmi/EncryptionApi  # Path to the .sln/.csproj file
