--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,35 +1,36 @@
-name: Build and Test
+# This is a basic workflow to help you get started with Actions
 
+name: CI
+
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches:
-      - main
-      - develop
+    branches: [ "main" ]
   pull_request:
-    branches:
-      - main
-      - develop
+    branches: [ "main" ]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
   build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: actions/checkout@v2
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '9.0.100-preview.7'  # Use the correct preview version for .NET 9.0
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
 
-    - name: Restore dependencies
-      run: dotnet restore
-      working-directory: ./Abdullahi_Elmi/EncryptionApi  # Path to the .sln/.csproj file
-
-    - name: Build
-      run: dotnet build --no-restore
-      working-directory: ./Abdullahi_Elmi/EncryptionApi  # Path to the .sln/.csproj file
-
-    - name: Run tests
-      run: dotnet test --no-build --verbosity normal
-      working-directory: ./Abdullahi_Elmi/EncryptionApi  # Path to the .sln/.csproj file
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
